# bankassist

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_dataset_exploration.ipynb
research/: dataset_notes.md  experiment_log.md  model_notes.md  project_scope.md
src/bankassist/data/: preprocess.py
tests/: test_preprocess.py
