[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bankassist-triage"
version = "0.1.0"
description = "Local SFT/LoRA project for structured banking ticket triage."
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
